/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Brice Berwanger
 */
package ucf.assignments;


import java.util.Date;

public class Item {

    public Item(String des, String date){

    }

    private Date convertDate(){

        return null;
    }

    public Date getDate(){

        return null;
    }

    public String getDescription(){

        return null;
    }

    public void editDescription(String des){

    }

    public void editDate(String date){

    }

    public void editFinished(Boolean finish){
        t
    }

    public Boolean checkFinished() {
        /
        return false; //right now false
    }

}